--- a/frontend/src/components/NoteModal/NoteModal.module.css
+++ b/frontend/src/components/NoteModal/NoteModal.module.css
@@ -83,4 +83,13 @@ button:hover {
 .saveBtn {
   width: 100px;
   margin: 0 auto;
+  background-color: #323232;
+  height: 32px;
+  border: none;
+  border-radius: 4px;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 8px 16px;
+  transition: background-color 0.3s ease;
+  max-width: 100px;
 }
